# tp-ros2

./: .gitignore  README.md
src/tp1/: CMakeLists.txt
src/tp1/src/: main_nodeA.cpp  main_nodeB.cpp
src/tp2/: CMakeLists.txt  package.xml
src/tp2/config/: tp2.yaml
src/tp2/launch/: tp2_launch.py
src/tp2/meshes/: boat.dae
src/tp2/src/: main_nodeBoatSim.cpp
